--- a/public/css/style.css
+++ b/public/css/style.css
@@ -5,6 +5,7 @@
     padding: 0px;
 }
 
+
 /* Home Page */
 
 .page-heading{
@@ -26,8 +27,8 @@
     font-size: 26px;
 }
 
-/* New Home Page */
 
+/* New Home Page */
 
 .fa-solid{
     color:#0dcaf0;
@@ -45,12 +46,12 @@
 .dept{
     background-color: #0dcaf0;
     text-align: center;
-    padding: 5px 30px 5px 18px;
+    padding: 5px 18px;
     color: white;
     font-weight: 500;
     font-size: 14px;
+    border-radius: 10px;
     margin: 10px 0px 10px 10px;
-    clip-path: polygon(100% 0%, 90% 50%, 100% 100%, 0 99%, 0% 50%, 0 0);
 }
 .inst {
     padding: 5px 18px 5px 0px;
@@ -107,6 +108,7 @@
     font-size: 28px;
 }
 
+
 /* Course Details Page */
 
 .course-details td{
@@ -115,6 +117,7 @@
 
 
 /* Dropdown Button */
+
 .dropbtn {
     color: white;
     border: 1px solid black;
@@ -127,7 +130,6 @@
     position: relative;
     display: inline-block;
 }
-
 .dropdown-content {
     border-radius: 10px;
     display: none;
@@ -138,21 +140,23 @@
     overflow: auto;
     box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
     z-index: 1;
-}
-  
+} 
 .dropdown-content a {
     color: black;
     padding: 12px 16px;
     text-decoration: none;
     display: block;
 }
-  
-.dropdownw a:hover {background-color: #ddd;}
-  
-.show {display: block;}
+.dropdownw a:hover {
+    background-color: #ddd;
+}
+.show {
+    display: block;
+}
 
 
 /* Pagination */
+
 .pagin{
     text-align: center;
     margin: 30px 30px 60px;
@@ -169,7 +173,6 @@
     font-size: 1.2em;
     line-height: 45px;
 }
-
 .previous-page, .next-page{
     background: #0dcaf0;
     width: 80px;
@@ -177,41 +180,38 @@
     cursor: pointer;
     transition: 0.3s ease;
 }
-
 .previous-page{
     clip-path: polygon(100% 0%, 85% 50%, 100% 100%, 15% 100%, 0% 50%, 15% 0%);
     padding-right: 5px;
 }
-
 .next-page{
     clip-path: polygon(85% 0%, 100% 50%, 85% 100%, 0% 100%, 15% 50%, 0% 0%);
     padding-left: 5px;
 }
-
 .previous-page:hover{
     transform: translateX(-5px);
 }
-
 .next-page:hover{
     transform: translateX(5px);
 }
-
 .current-page, .dots{
     background: #ccc;
     width: 45px;
     border-radius: 50%;
     cursor: pointer;
 }
-
 .active{
     background: #0dcaf0;
 }
-
 .disable{
     background: #ccc;
+    color: white;
+    transition: 0s ease;
 }
-
-
+.disable:hover{
+    transform: translateX(0px);
+    color: white;
+}
 
 @media (max-width: 38em) {
     .result-link{
